# ttt-video-dit

./: .gitmodules  LICENSE  README.md  environment.yaml  pyproject.toml  sample.py  train.py  train_submitit.py
configs/eval/ttt-linear/: 18s.toml  30s.toml  3s.toml  63s.toml  9s.toml
configs/eval/ttt-mlp/: 18s.toml  30s.toml  3s.toml  63s.toml  9s.toml
configs/train/ttt-linear/: 18s.toml  30s.toml  3s.toml  63s.toml  9s.toml
configs/train/ttt-mlp/: 18s.toml  30s.toml  3s.toml  63s.toml  9s.toml
data/: precomp_text.py  precomp_video.py
docs/: dataset.md  sampling.md  training.md
inputs/: example-9s.json
scripts/: convert_weights_from_hf.sh  precompute.sh  sample_singlenode.sh  train_singlenode.sh  train_submitit.sh
ttt/datasets/: data_sampler.py  preembedding_dataset.py
ttt/infra/: checkpoint.py  config_manager.py  logging.py  optimizers.py  parallelisms.py  train_iterator.py  utils.py
ttt/models/: configs.py
ttt/models/cogvideo/: dit.py  model.py  sampler.py  utils.py
ttt/models/cogvideo/weight_conversion/: from_hf.py
ttt/models/ssm/: linear_triton.py  mlp_tk.py  ttt_layer.py  utils.py
ttt/models/ssm/kernels/: linear_backward.py  linear_forward.py
ttt/models/ssm/ops/: __init__.py  ttt_linear.py  ttt_mlp.py  utils.py
ttt/models/vae/: attention.py  autoencoder.py  cp_enc_dec.py  cp_enc_dec_test.py  utils.py
